--- a/Journal.Rmd
+++ b/Journal.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "SEM with Lavaan"
+title: "SEM with lavaan"
 output:
   html_document:
     toc: true
@@ -65,7 +65,7 @@ semPaths(regression.fit,
 ```
 
 
-# Structural equation model
+# Structural Equation Model
 
 ใช้ตัวอย่างจากบทความวิชาการของ     [Download](https://drive.google.com/file/d/1XlNeCyZpZDvq8goRQeYWgELrO_QT2Cw7/view)
 
