--- a/Mplus.Rmd
+++ b/Mplus.Rmd
@@ -14,10 +14,25 @@ output:
 knitr::opts_chunk$set(message=FALSE,warning=FALSE, cache=TRUE)
 ```
 
-IMPORTANT: You can delete everything in here and start fresh. You might want to start by not deleting anything above this line until you know what that stuff is doing.
+```{r klippy, echo=FALSE, include=TRUE}
+klippy::klippy('')
+```
 
+## Common use
 
-This is an .Rmd file. It is plain text with special features. Any time you write just like this, it will be compiled to normal text in the website. If you put a \# in front of your text, it will create a top level-header.
+The `klippy` package enhances `R Markdown` `HTML` documents with **copy to 
+clipboard buttons**. You only have to paste the following chunk anywhere in 
+your `Rmd` file.
+
+Obviously, **you have to try the clipboard button in the upper left corner of this chunk!**
+
+````{#ex .markdown .klippy}
+`r ''````{r klippy, echo=FALSE, include=TRUE}
+klippy::klippy()
+```
+````
+
+The `klippy()` function inserts a klippy[^1] in each `R` or `markdown` code block.
 
 # 
 
@@ -27,21 +42,3 @@ Last compiled: `r Sys.Date()`
 
 การวิเคราะห์องค์ประกอบ
 
-```{r}
-install.packages("foreign", dependencies=TRUE)
-install.packages("lavaan", dependencies=TRUE)
-library(foreign) 
-library(lavaan)
-
-dat <- read.spss("C:/Users/thomr/OneDrive/Desktop/R/t400.sav", to.data.frame = TRUE, use.value.labels = FALSE)
-
-round(cor(dat[,4:8]),2)
-round(cov(dat[,4:8]),2)
-
-#one factor three items, default marker method
-model  <- ' env  =~ lead + inno + team + pscse + diver'
-t400 <- cfa(model, data=dat,std.lv=TRUE) 
-summary(t400, fit.measure=TRUE, standardized=TRUE)
-
-
-```
