--- a/Journal.Rmd
+++ b/Journal.Rmd
@@ -1,13 +1,11 @@
 ---
-title: "SEM TRS"
+title: "SEM with lavaan"
 output:
-  html_document:
-    toc: true
-    toc_float: true
-    collapsed: false
-    number_sections: false
+  html_document: 
+    toc: yes
+    toc_float: yes
+    collapsed: no
     toc_depth: 1
-    #code_folding: hide
 ---
 
 ```{r setup, include=FALSE}
@@ -17,8 +15,8 @@ knitr::opts_chunk$set(message=FALSE,warning=FALSE, cache=TRUE)
 
 
 # 
-
 Last compiled: `r Sys.Date()`
+
 
 # Path analysis
 ## การวิเคราะห์เส้นทางอิทธิพล
@@ -27,7 +25,7 @@ Last compiled: `r Sys.Date()`
 
 ```{r}
 library(lavaan)
-#correalation from article
+#correlation from article
 regression.cor <- lav_matrix_lower2full(c(1.0,
                                           0.14, 1.0,
                                           0.34, -0.14, 1.0,
@@ -63,6 +61,49 @@ semPaths(regression.fit,
          label.cex = 1.3
          )
 ```
+
+# Confirmatory Factor Analysis
+
+ใช้ตัวอย่างจากบทความวิชาการของ     [Download](https://drive.google.com/file/d/1XlNeCyZpZDvq8goRQeYWgELrO_QT2Cw7/view)
+
+ข้อมูลที่ใช้ในการวิเคราะห์ : correlation matrix จากบทควา
+```{r}
+library(lavaan)
+
+lower = '
+1.000 
+0.859 1.000 
+0.873 0.882 1.000
+0.816 0.854 0.852 1.000
+0.281 0.319 0.297 0.301 1.000
+0.369 0.363 0.343 0.363 0.628 1.000
+
+ '
+au.cor = getCov(lower, names = c("sa", "rt", "bp","imp", "ao", "we"))
+au.cor
+
+au.cov = cor2cov(R = au.cor, sds = c(0.629, 0.341, 0.560, 
+                                         0.318,0.284, 0.291 ))
+au.cov
+
+
+model = '
+	 	   auf =~ sa + rt + bp + imp
+ 	 '
+#summary(onefactor)
+results = sem(model, sample.cov=au.cov, sample.nobs=605)
+summary(results, standardize=TRUE, fit.measures=TRUE)
+modificationIndices(results, minimum.value = 0)
+
+library(semPlot)
+
+semPaths(results,
+         whatLabels = "std",
+         layout = "tree")
+
+```
+
+
 
 
 # Structural Equation Model
