--- a/Mplus.Rmd
+++ b/Mplus.Rmd
@@ -10,35 +10,146 @@ output:
     #code_folding: hide
 ---
 
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(message=FALSE,warning=FALSE, cache=TRUE)
 ```
-
 ```{r klippy, echo=FALSE, include=TRUE}
-klippy::klippy('')
+klippy::klippy(position = c('top', 'right'))
 ```
 
-## Common use
-
-The `klippy` package enhances `R Markdown` `HTML` documents with **copy to 
-clipboard buttons**. You only have to paste the following chunk anywhere in 
-your `Rmd` file.
-
-Obviously, **you have to try the clipboard button in the upper left corner of this chunk!**
-
-````{#ex .markdown .klippy}
-`r ''````{r klippy, echo=FALSE, include=TRUE}
-klippy::klippy()
-```
-````
-
-The `klippy()` function inserts a klippy[^1] in each `R` or `markdown` code block.
-
-# 
 
 Last compiled: `r Sys.Date()`
 
+
+# Path analysis
+
+Reading assignment : Kurt, T., Duyar, I., & Calik, T. (2012). Are we legitimate yet? A closer look at the casual relationship mechanisms among principal leadership, teacher self‐efficacy and collective efficacy. Journal of Management Development, 31, 71-86. 
+
+- Data in .txt format [Download](https://github.com/trsamp/SEM101/blob/main/data/01PA.txt)
+- Data in SPSS format [Download](https://github.com/trsamp/SEM101/blob/main/data/01PA.sav)
+
+```
+
+TITLE: individual montecarlo
+DATA:
+  FILE IS data2.txt; !keep all file in the same folder
+
+VARIABLE:
+  NAMES ARE TFL TSL CTE TEF; !all variable in "data2.txt"
+  USEVARIABLES ARE TFL TSL CTE TEF; 
+
+MODEL: !put the syntax indicate causal relationships
+	TEF ON CTE TSL TFL; ! TEF is regressed on CTE TSL TEL;
+	CTE ON TSL TFL;
+   TSL with TFL;
+
+MODEL INDIRECT:
+TEF IND TFL;
+
+OUTPUT: SAMPSTAT STDYX; !standardized coefficient need to be report
+
+```
+
 # Confirmatory Factor Analysis
 
-การวิเคราะห์องค์ประกอบ
+Reading assignment : Kulophas, D., Hallinger, P., Ruengtrakul, A., & Wongwanich, S. (2018). Exploring the effects of authentic leadership on academic optimism and teacher engagement in Thailand. International Journal of Educational Management, 32(1), 27-45. https://doi.org/10.1108/IJEM-10-2016-0233
 
+- Data in SPSS format [Download](https://github.com/trsamp/SEM101/blob/main/data/03SEM.sav)
+
+```{r}
+library(lavaan)
+
+lower = '
+1.000 
+0.859 1.000 
+0.873 0.882 1.000
+0.816 0.854 0.852 1.000
+0.281 0.319 0.297 0.301 1.000
+0.369 0.363 0.343 0.363 0.628 1.000
+
+ '
+au.cor = getCov(lower, names = c("sa", "rt", "bp","imp", "ao", "we"))
+au.cor
+
+au.cov = cor2cov(R = au.cor, sds = c(0.629, 0.341, 0.560, 
+                                         0.318,0.284, 0.291 ))
+au.cov
+
+
+model = '
+	 	   auf =~ sa + rt + bp + imp
+ 	 '
+#summary(onefactor)
+results = sem(model, sample.cov=au.cov, sample.nobs=605)
+summary(results, standardize=TRUE, fit.measures=TRUE)
+modificationIndices(results, minimum.value = 0)
+
+library(semPlot)
+
+semPaths(results,
+         whatLabels = "std",
+         layout = "tree",
+         style = "ram",
+         rotation = 1,
+         sizeMan = 7,
+         sizeLat = 7,
+         color = "lightgray",
+         edge.label.cex = 1.2,
+         label.cex = 1.3)
+
+```
+
+
+
+
+# Structural Equation Model
+
+Reading assignment : Kulophas, D., Hallinger, P., Ruengtrakul, A., & Wongwanich, S. (2018). Exploring the effects of authentic leadership on academic optimism and teacher engagement in Thailand. International Journal of Educational Management, 32(1), 27-45. https://doi.org/10.1108/IJEM-10-2016-0233
+
+- Data in SPSS format [Download](https://github.com/trsamp/SEM101/blob/main/data/03SEM.sav)
+
+```{r}
+library(lavaan)
+
+lower = '
+1.000 
+0.859 1.000 
+0.873 0.882 1.000
+0.816 0.854 0.852 1.000
+0.281 0.319 0.297 0.301 1.000
+0.369 0.363 0.343 0.363 0.628 1.000
+
+ '
+au.cor = getCov(lower, names = c("sa", "rt", "bp","imp", "ao", "we"))
+au.cor
+
+au.cov = cor2cov(R = au.cor, sds = c(0.629, 0.341, 0.560, 
+                                         0.318,0.284, 0.291 ))
+au.cov
+
+
+model = '
+	 	   auf =~ sa + rt + bp + imp
+	     aof =~ ao
+	     wef =~ we
+	     wef~ aof + auf
+	     aof ~ auf
+	     ao ~~ .01*ao
+	     we ~~ .01*we
+	     sa ~~ bp
+ 	 '
+#summary(onefactor)
+results = sem(model, sample.cov=au.cov, sample.nobs=605)
+summary(results, standardize=TRUE, fit.measures=TRUE)
+modificationIndices(results, minimum.value = 0)
+
+library(semPlot)
+
+semPaths(results,
+         whatLabels = "std",
+         layout = "tree")
+
+sessionInfo()
+
+```
